# looker-embed-demo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  skills-lock.json  spa-mode.md  start.sh  ty.toml
.gemini/config/: mcp_config.json
.github/workflows/: ci.yml  main.yml  release.yml
backend/: .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  utils.py
backend/app/: middleware.py  models.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: agents.py  auth.py  system.py
backend/app/core/: config.py  cookies.py  security.py
backend/app/modules/: __init__.py
backend/app/modules/adk_agent/: __init__.py  router.py  service.py
backend/app/services/: assets.py  looker.py  version.py  vite_env.py
backend/tests/: conftest.py  test_agents_endpoint.py  test_config.py  test_frontend_env.py  test_looker_service.py  test_main.py  test_optional_modules.py
frontend/: .cta.json  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: env.js
frontend/src/: main.tsx  report-viewer.css  routeTree.gen.ts  styles.css
lookml/: manifest.lkml  meep.refinement.lkml
lookml/locale/: de_DE.strings.json  (+4 more)
scripts/: agents_demo_script.md  brand_lookup_demo_script.md  brand_overview_demo_script.md  conversational_analytics_demo_script.md  explore_demo_script.md  home_page_demo_script.md  install_module.py  modules_registry.json  pbl_demo_script_2026.md  portal_settings_demo_script.md  report_builder_demo_script.md  report_viewer_demo_script.md
(+263 files in other folders)
